Updated CoC and privacy policy

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -107,6 +107,10 @@ section {
         flex: 0 0 66.666667%;
         max-width: 66.666667%;
     }
+    .col-lg-4 {
+      flex: 0 0 auto;
+      width: 33.333333%;
+    }
 }
 
 .col,
