--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,32 +1,152 @@
 <div id="homeBody" class="row justify-content-center">
-    <div class="col-lg-8 pane" style="padding:0.5rem">
-        <h3 class="page-header">wat</h3>
-        <p>
-            sweet is a utopian social network based on a few basic principles derived from decentralised organisation practices: <strong>transparency</strong>, <strong>direct democracy</strong>, and <strong>safe spaces</strong>.
-        </p>
-        <p>
-            some of our features include:
-        </p>
-        <ul>
-            <li>per-post visibility settings;</li>
-            <li>the ability to trust specific people, who will see your private posts, while people you do not trust only see your public posts;</li>
-            <li>a whisper network-style ability to anonymously flag specific people, whose names come up with a warning sign for the people who trust you</li>
-            <li>communities where all changes, including user muting and banning, are accepted or rejected via an anonymous vote of active community members;</li>
-            <li>and more to come, including the ability for all members to report and vote on the removal of disruptive users from the site, easily delete your account and data, and change the visibility of old posts.</li>
-        </ul>
-        <h3 class="page-header">are u a 'mastodon'</h3>
-        <p>
-            sweet is <em>not</em> a decentralised platform like Mastodon or Scuttlebutt. all our code is open source so you are very welcome to run your own instance of the app, but individual instances do not link up with each other, and all user data is currently stored on a server located in the UK. <strong>as of july 2019, no external organisation has ever requested access to the data kept on sweet’s server.</strong>
-        </p>
-        <p>
-            it goes without saying that sweet has no ads and will never sell or otherwise unethically make use of user data. we do not use tracking cookies or any external APIs, which would require us to transfer your data outside of our server for processing.
-        </p>
-        <p>
-            unlike most other social networks, including decentralised ones which make the privacy of user data a priority, sweet's priority is increasing <em>social</em> security. we work to create a network which has no central administrative authority, where all users have equal access to all public information, and where all users are accountable to each other for their actions. sweet is not perfectly safe or perfectly private, but it is a utopian experiment in creating a better online world for folk who are made to feel unsafe online, in particular queer and trans people, women, disabled people, and people of colour.
-        </p>
-        <h3 class="page-header">whomst</h3>
-        <p>
-            sweet is under active development <a href="https://github.com/lowercasename/sweet/">on github</a>. please join us and help out! the main development team currently consists of <a href="https://sweet.sh/lowercasename">@lowercasename</a> (Raphael) and <a href="https://sweet.sh/giantpredatorymollusk">@giantpredatorymollusk</a> (Mitch). shoot either of us a message on sweet or open an issue or pull request on github if you find a bug, would like to suggest a new feature, or can see a good reason to change an existing feature.
-        </p>
+  <div class="col-md-4 d-none d-lg-block">
+    <div class="fixed-container">
+      <section class="pane sticky-sidebar" style="padding:0.5rem">
+        <h3>Information and Support</h3>
+        <p><a href="#about-sweet">About Sweet</a></p>
+        <p><a href="#those-responsible">Those Responsible</a></p>
+        <p><a href="#comparison">Comparison with other social networks</a></p>
+        <p><a href="#code-of-conduct">Code of Conduct</a></p>
+        <p><a href="#privacy-policy">Privacy Policy</a></p>
+      </section>
     </div>
+  </div>
+  <div class="col-lg-8 pane" style="padding:0.5rem">
+    <h3 class="page-header" id="about-sweet">About Sweet</h3>
+    <p>
+      Sweet is a utopian social network based on a few basic principles derived from decentralised organisation
+      practices: <strong>transparency</strong>, <strong>direct democracy</strong>, and <strong>safe spaces</strong>.
+    </p>
+    <p>
+      Some of our features include:
+    </p>
+    <ul>
+      <li>Per-post visibility settings;</li>
+      <li>The ability to trust specific people, who will see your private posts, while people you do not trust only see
+        your public posts;</li>
+      <li>A whisper network-style ability to anonymously flag specific people, whose names come up with a warning sign
+        for the people who trust you</li>
+      <li>Communities where all changes, including user muting and banning, are accepted or rejected via an anonymous
+        vote of active community members;</li>
+      <li>And more to come, including the ability for all members to report and vote on the removal of disruptive users
+        from the site, easily delete your account and data, and change the visibility of old posts.</li>
+    </ul>
+    <h3 class="page-header" id="comparison">Comparison with other social networks</h3>
+    <p>
+      Sweet is <em>not</em> a decentralised platform like Mastodon or Scuttlebutt. All our code is open source so you
+      are very welcome to run your own instance of the app, but individual instances do not link up with each other, and
+      all user data is currently stored on a server located in the UK. <strong>As of May 2020, no external organisation
+        has ever requested access to the data kept on Sweet’s server.</strong>
+    </p>
+    <p>
+      It goes without saying that Sweet has no ads and will never sell or otherwise unethically make use of user data.
+      We do not use tracking cookies or any external APIs, which would require us to transfer your data outside of our
+      server for processing.
+    </p>
+    <p>
+      Unlike most other social networks, including decentralised ones which make the privacy of user data a priority,
+      Sweet's priority is increasing <em>social</em> security. We work to create a network which has no central
+      administrative authority, where all users have equal access to all public information, and where all users are
+      accountable to each other for their actions. Sweet is not perfectly safe or perfectly private, but it is a utopian
+      experiment in creating a better online world for folk who are made to feel unsafe online, in particular queer and
+      trans people, women, disabled people, and people of colour.
+    </p>
+    <h3 class="page-header" id="those-responsible">Those Responsible</h3>
+    <p>
+      Sweet is under active development <a href="https://github.com/lowercasename/sweet/">on Github</a>. Please join us
+      and help out! The main development team currently consists of <a
+        href="https://sweet.sh/lowercasename">@lowercasename</a> (Raphael) and <a
+        href="https://sweet.sh/giantpredatorymollusk">@giantpredatorymollusk</a> (Mitch). Shoot either of us a message
+      on Sweet or open an issue or pull request on Github if you find a bug, would like to suggest a new feature, or can
+      see a good reason to change an existing feature.
+    </p>
+    <h3 class="page-header" id="code-of-conduct">Code of Conduct</h3>
+    <p><em>Note: ‘Sweet’ in this document refers to the Sweet website at <a href="https://sweet.sh">sweet.sh</a>, and
+        the Android and iOS apps. ‘The administrators’ refers to the administrators on this organization, currently
+        Raphael Kabo (<a href="https://sweet.sh/lowercasename">sweet.sh/lowercasename</a> / <a
+          href="mailto:support@sweet.sh">support@sweet.sh</a> / <a
+          href="mailto:raphaelkabo@gmail.com">raphaelkabo@gmail.com</a>).</em></p>
+    <p><strong>Sweet is dedicated to providing a harassment-free experience for everyone. We do not tolerate harassment
+        of participants in any form.</strong></p>
+    <p>This code of conduct applies to all Sweet spaces, including public channels, private channels and direct
+      messages, both online and off. Anyone who violates this code of conduct may be sanctioned or expelled from these
+      spaces at the discretion of the administrators.</p>
+    <p>Members under 18 are allowed, but are asked to stay out of channels with adult imagery.</p>
+    <p>Some Sweet spaces, such as Communities, may have additional rules in place, which will be made clearly available
+      to participants. Participants are responsible for knowing and abiding by these rules. This code of conduct holds
+      priority in any disputes over rulings.</p>
+    <h4 id="types-of-harassment">Types of Harassment</h4>
+    <ul>
+      <li>Offensive comments related to gender, gender identity and expression, sexual orientation, disability, mental
+        illness, neuro(a)typicality, physical appearance, body size, race, immigration status, religion, or other
+        identity marker. This includes anti-Indigenous/Nativeness and anti-Blackness.</li>
+      <li>Unwelcome comments regarding a person’s lifestyle choices and practices, including those related to food,
+        health, parenting, drugs, and employment.</li>
+      <li>Deliberate misgendering or use of “dead” or rejected names</li>
+      <li>Gratuitous or off-topic sexual images or behaviour in spaces where they’re not appropriate</li>
+      <li>Physical contact and simulated physical contact (eg, textual descriptions like “hug” or “backrub”) without
+        consent or after a request to stop.</li>
+      <li>Threats of violence Incitement of violence towards any individual, including encouraging a person to commit
+        suicide or to engage in self-harm</li>
+      <li>Deliberate intimidation</li>
+      <li>Stalking or following</li>
+      <li>Harassing photography or recording, including logging online activity for harassment purposes</li>
+      <li>Sustained disruption of discussion</li>
+      <li>Unwelcome sexual attention</li>
+      <li>Patterns of inappropriate social contact, such as requesting/assuming inappropriate levels of intimacy with
+        others</li>
+      <li>Continued one-on-one communication after requests to cease</li>
+      <li>Deliberate “outing” of any aspect of a person’s identity without their consent except as necessary to protect
+        vulnerable people from intentional abuse</li>
+      <li>Publication of non-harassing private communication</li>
+      <li>Microaggressions, which take the form of everyday jokes, put downs, and insults, that spread humiliating
+        feelings to people of marginalized groups</li>
+    </ul>
+    <p>Jokes that resemble the above, such as “hipster racism”, still count as harassment even if meant satirically or
+      ironically.</p>
+    <p>Sweet prioritizes marginalized people’s safety over privileged people’s comfort. The administrators will not act
+      on complaints regarding:</p>
+    <ul>
+      <li>“Reverse”-isms, including “reverse racism,” “reverse sexism,” and “cisphobia”</li>
+      <li>Reasonable communication of boundaries, such as “leave me alone,” “go away,” or “I’m not discussing this with
+        you.”</li>
+      <li>Communicating in a “tone” you don’t find congenial</li>
+      <li>Criticism of racist, sexist, cissexist, or otherwise oppressive behavior or assumptions.</li>
+    </ul>
+    <h4 id="reporting">Reporting</h4>
+    <p>If you are being harassed by a member of Sweet, notice that someone else is being harassed, or have any other
+      concerns, please contact an administrator (listed at the top of this document) directly. If the person harassing
+      you is an administrator, they will recuse themselves from handling your incident.</p>
+    <p>The administrators reserve the right to exclude people from Sweet based on their past behavior, including
+      behavior outside Sweet spaces and behavior towards people who are not on Sweet. We will not name harassment
+      victims without their affirmative consent.</p>
+    <p>Remember that you are able to flag people on Sweet, which is an anonymous way to make others aware of a person’s
+      behaviour, but is not designed as a replacement for reporting.</p>
+    <h4 id="consequences">Consequences</h4>
+    <p>Participants asked to stop any harassing behavior are expected to comply immediately. If a participant engages in
+      harassing behavior, the administrators may take any action they deem appropriate, up to and including expulsion
+      from all Sweet spaces and identification of the participant as a harasser to other Sweet members or the general
+      public.</p>
+    <h4 id="updates">Updates</h4>
+    <p>The administrators reserve the right to update the Code of Conduct at any time at their discretion. Updates to
+      the CoC will be communicated to users via email and posts from admin accounts. If you have any concerns about or
+      suggestions for the CoC, please contact an administrator.</p>
+    <h4 id="license">License</h4>
+    <p>This was adapted from the <a href="https://lgbtq.technology/coc.html">LGBTQ in Tech Code of Conduct</a> and the
+      <a href="https://friend.camp/about/more#coc">Friend Camp Code of Conduct</a>, and as such is licensed using a <a
+        href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero License</a>, meaning the
+      contents are in the public domain.</p>
+    <h3 class="page-header" id="privacy-policy">Privacy Policy</h3>
+    <p>The data you post here lives on a server that Raphael Kabo runs. He promises that he won’t look at your private
+      data. You are just going to have to trust him on this. He also promises that the data will never leave this server
+      in unencrypted form (for instance, it may be encrypted to be stored as a backup on another server).</p>
+    <p>You can set your posts to be visible by the wider Internet. If you do so, any information you put in those posts
+      will be visible and downloadable by anybody. If you want decent privacy (i.e. your information is only visible to
+      the people you select), the only way to do so is to set your account to be visible to Sweet users only, post only
+      private posts, and not to post in any publicly viewable communities.</p>
+    <h3 id="license-1">License</h3>
+    <p>This privacy policy was adapted from <a href="https://friend.camp/about/more#pp">one written by Darius Kazemi</a>
+      and is provided under a <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero
+        License</a>, meaning the contents are in the public domain.</p>
+  </div>
 </div>
