Sweet app links!

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -78,6 +78,14 @@
                         </p>
                     </section>
                 {{/if}}
+                <section class="apps">
+                  <h4>Download the Sweet app!</h4>
+                  <hr />
+                  <div style="display: flex;">
+                    <a target="_blank" href="https://apps.apple.com/gb/app/sweet-your-social-network/id1511517895"><img src="/images/app-store-badge.png" alt="Download on the App Store" style="height:40px;margin-right: .25rem;"/></a>
+                    <a target="_blank" href="https://play.google.com/store/apps/details?id=com.rk.sweet"><img src="/images/google-play-badge.png" alt="Download on Google Play" style="height:40px;"/></a>
+                  </div>
+                </section>
             </div>
         </div>
     {{/or}}
