--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,7 +8,6 @@
       Home to <strong>{{userCount}}</strong> people and <strong>{{communityCount}}</strong> communities
     </p>
     <div class='logged-out-communites-list'>
-
       {{#each communities}}
       <a href="/community/{{this.slug}}">
         <img
@@ -22,6 +21,17 @@
     </p>
   </div>
   <div class="col-md-4">
+
+    <div class="logged-out-form">
+      <h4>Download the Sweet app!</h4>
+    <div style="display: flex;">
+      <a target="_blank" href="https://apps.apple.com/gb/app/sweet-your-social-network/id1511517895"><img
+          src="/images/app-store-badge.png" alt="Download on the App Store"
+          style="height:40px;margin-right: .25rem;" /></a>
+      <a target="_blank" href="https://play.google.com/store/apps/details?id=com.rk.sweet"><img
+          src="/images/google-play-badge.png" alt="Download on Google Play" style="height:40px;" /></a>
+    </div>
+    </div>
 
     {{> message }}
 
