--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -7,8 +7,14 @@
         {{> infiniteScrollLoadingSpinner}}
     </div>
     {{#or loggedInUserData.settings.showRecommendations loggedInUserData.settings.showHashtags}}
-        <div class="col-md-4 d-none d-lg-block">
-            <div class="fixed-container">
+        <div class="col-md-4 d-none d-lg-block" id="homeSidebar">
+            <div class="sidebar__inner">
+                <section class="admin-notices">
+                  <h4>Sweet News</h4>
+                  <hr />
+                  <p><em>4 August 2020</em></p>
+                  <p>Hi new and old Sweet users! I've fixed a few broken Sweet features in the last two days, including emails not being sent and user profile pictures not uploading. If your profile picture isn't showing up, re-upload it now and it should work. You can always let us know in the <a href="https://sweet.sh/community/sweet-development">Sweet Development</a> community if you see any bugs.</p>
+                </section>
                 {{#if loggedInUserData.settings.showRecommendations}}
                     <section class="recommendations">
                         <h4>Recommended</h4>
