Capitalised the Sweet page title

--- a/views/layouts/logged-out.handlebars
+++ b/views/layouts/logged-out.handlebars
@@ -4,7 +4,7 @@
 
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, shrink-to-fit=no">
-        <title>{{#unless metadata.title}}sweet{{else}}{{metadata.title}}{{/unless}}</title>
+        <title>{{#unless metadata.title}}Sweet{{else}}{{metadata.title}}{{/unless}}</title>
 
         <!-- Favicon -->
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=22062019">
