Add support for ctrl/cmd-enter on comments and posts
Because keyboards!

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -52,7 +52,7 @@
 
   {{#if loggedIn}}
     {{>newPostFormTemplatesContainer}}
-    <script src="/js/textEditorScripts.min.js"></script>
+    <script src="/js/textEditorScripts.js"></script>
   {{/if}}
 
   {{> onPostLoadScripts }}
