--- a/views/partials/scriptPartials/newCommentFormTemplate.handlebars
+++ b/views/partials/scriptPartials/newCommentFormTemplate.handlebars
@@ -1,5 +1,5 @@
 <script id="new-comment-form-template" type="text/custom-template">
-<div class="new-comment-form" data-comment-type="\{{comment_type}}" data-post-id="\{{post_id}}" data-comment-id="\{{comment_id}}">
+<form class="new-comment-form" data-comment-type="\{{comment_type}}" data-post-id="\{{post_id}}" data-comment-id="\{{comment_id}}">
   <input type="file" class="file-input" accept="image/gif, image/jpeg, image/png" aria-label="Choose image" name="postImage" multiple>
   <div class="form-row">
     <div class="editable-post-content editable-text" id="postContent">
@@ -65,5 +65,5 @@
       <button type="submit" class="button create-comment">Reply <i class="fas fa-chevron-right"></i></button>
     </div>
   </div>
-</div>
+</form>
 </script>
