Little Ctrl/Cmd-Enter hint under new post form.

--- a/views/partials/newpostform.handlebars
+++ b/views/partials/newpostform.handlebars
@@ -6,6 +6,9 @@
     <div id="editor" class="editable-post-content editable-text">
       <p><br></p>
     </div>
+    <div id="shortcut-hint" class="form-row p-1 text-muted small" style="display:none;">
+      Press <span class="meta-key-symbol">Ctrl</span>-Enter to post.
+    </div>
     <div class="form-row mt-2 p-1 emoji-picker" id="new-post-emoji-picker" style="display:none">
       {{> emojilist }}
     </div>
