--- a/views/singlepost.handlebars
+++ b/views/singlepost.handlebars
@@ -37,7 +37,7 @@ $(function() {
 {{#if loggedIn}}
     var commentForm = undefined;
     if(commentForm = document.getElementsByClassName('editable-text')[0]){
-        attachQuill(commentForm,'Reply to this post with a good reply')
+        attachQuill(commentForm,'What would you like to say?')
     }
 
   $.post('/api/user/followers', function(data){
