Added formatting message under new post form

--- a/views/partials/newpostform.handlebars
+++ b/views/partials/newpostform.handlebars
@@ -7,7 +7,7 @@
       <p><br></p>
     </div>
     <div id="shortcut-hint" class="form-row p-1 text-muted small" style="display:none;">
-      Press <span class="meta-key-symbol">Ctrl</span>-Enter to post.
+      Press <span class="meta-key-symbol">Ctrl</span>-Enter to post, highlight text to format.
     </div>
     <div class="form-row mt-2 p-1 emoji-picker" id="new-post-emoji-picker" style="display:none">
       {{> emojilist }}
