Fixed a very obscure CSS bug

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -63,7 +63,7 @@
 
   {{> navbar }}
 
-  <main id="bodyContainer" class="container" style="overflow:hidden;">
+  <main id="bodyContainer" class="container" style="overflow:hidden;min-height: 100vh;">
 
     {{{body}}}
 
