--- a/views/partials/scriptPartials/miscInteractivityScripts.handlebars
+++ b/views/partials/scriptPartials/miscInteractivityScripts.handlebars
@@ -1,5 +1,10 @@
 <script type="text/javascript">
 
+// Hide broken images globally
+$('img').on('error', function() {
+  $(this).css('visibility', 'hidden');
+})
+
 //bootstrap doesn't officially support multiple modals open at once, so if an alert modal comes up over our editor modal we have to sneakily keep it from resetting
 //the body when it's dismissed and make the backdrops not collide with each other
 var oldAlert = bootbox.alert;
