--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,13 +16,13 @@
     <meta name="msapplication-TileColor" content="#b91d47">
     <meta name="theme-color" content="#ffffff">
 
-  <meta property="og:title" content="{{#unless metadata.title}}sweet{{else}}{{metadata.title}}{{/unless}}">
-  <meta property="og:description" content="{{#unless metadata.description}}A trust and community-based lightweight social network.{{else}}{{metadata.description}}{{/unless}}">
+  <meta property="og:title" content="{{#unless metadata.title}}Sweet{{else}}{{metadata.title}}{{/unless}}">
+  <meta property="og:description" content="{{#unless metadata.description}}A trust and community-based social network.{{else}}{{metadata.description}}{{/unless}}">
   <meta property="og:image" content="{{#unless metadata.image}}https://sweet.sh/android-chrome-512x512.png{{else}}{{metadata.image}}{{/unless}}">
   <meta property="og:url" content="{{#unless metadata.url}}https://sweet.sh/{{else}}{{metadata.url}}{{/unless}}">
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="{{#unless metadata.title}}sweet{{else}}{{metadata.title}}{{/unless}}">
-  <meta name="twitter:description" content="{{#unless metadata.description}}A trust and community-based lightweight social network.{{else}}{{metadata.description}}{{/unless}}">
+  <meta name="twitter:title" content="{{#unless metadata.title}}Sweet{{else}}{{metadata.title}}{{/unless}}">
+  <meta name="twitter:description" content="{{#unless metadata.description}}A trust and community-based social network.{{else}}{{metadata.description}}{{/unless}}">
   <meta name="twitter:image" content="{{#unless metadata.image}}https://sweet.sh/android-chrome-512x512.png{{else}}{{metadata.image}}{{/unless}}">
 
   <link href="https://cdn.quilljs.com/1.3.6/quill.bubble.css" rel="stylesheet">
