Improved design of add link preview form

--- a/views/partials/newpostform.handlebars
+++ b/views/partials/newpostform.handlebars
@@ -14,8 +14,11 @@
     </div>
   <div class="link-form-cont"> {{! this is only here bc jquery applies display:block when it slides something down, which would break the below div if it slid down that}}
     <div class="my-2 linkPreviewAddingForm">
-      <input type="text" class="form-control" name="linkPreviewUrlEntry" id="linkPreviewUrlEntry" placeholder="endless.horse" />
-      <button type="button" class="button grey-button link-add" style="margin-left: 0.5rem;"><i class="fas fa-arrow-up"></i></button>
+      <input type="text" class="form-control" name="linkPreviewUrlEntry" id="linkPreviewUrlEntry" placeholder="http://endless.horse" />
+      <button type="button" class="button grey-button link-add" style="margin-left: 0.5rem;"><i class="fas fa-plus"></i> Add link</button>
+    </div>
+    <div class="p-1">
+      <p style="flex-basis: 100%" class="small text-muted">Insert a link preview. You can also select text above and link it without a preview.</p>
     </div>
   </div>
   <div id="bottomPostControlsRow" class="mt-2 post-controls">
