--- a/views/partials/notifications.handlebars
+++ b/views/partials/notifications.handlebars
@@ -24,11 +24,11 @@
 <script type="text/javascript">
   if (notificationsCount > 0) {
     $(".notifications-count").html('<i class="fas fa-dot-circle"></i>');
-    document.title = '(⚐) sweet';
+    document.title = '(⚐) ' + document.title.replace('(⚐) ', '');
   }
   else {
     $(".notifications-count").html('');
-    document.title = 'sweet';
+    document.title = document.title.replace('(⚐) ', '');
   }
 </script>
 {{else}}
