--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -12,8 +12,8 @@
                 <section class="admin-notices">
                   <h4>Sweet News</h4>
                   <hr />
-                  <p><em>4 August 2020</em></p>
-                  <p>Hi new and old Sweet users! I've fixed a few broken Sweet features in the last two days, including emails not being sent and user profile pictures not uploading. If your profile picture isn't showing up, re-upload it now and it should work. You can always let us know in the <a href="https://sweet.sh/community/sweet-development">Sweet Development</a> community if you see any bugs.</p>
+                  <p><em>17 August 2020</em></p>
+                  <p>Hi new and old Sweet users! We've been busy with bugfixes and new features. In the Android and iOS app, notifications now take you to the post they're about, and more notification improvements are planned. There have been some small tweaks to the new post screen. We've also removed the email notifications and digest function. Please let us know in the <a href="https://sweet.sh/community/sweet-development">Sweet Development</a> community if you find a bug.</p>
                 </section>
                 {{#if loggedInUserData.settings.showRecommendations}}
                     <section class="recommendations">
