Tweaked Sweet News

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -13,7 +13,7 @@
                   <h4>Sweet News</h4>
                   <hr />
                   <p><em>17 August 2020</em></p>
-                  <p>Hi new and old Sweet users! We've been busy with bugfixes and new features. In the Android and iOS app, notifications now take you to the post they're about, and more notification improvements are planned. There have been some small tweaks to the new post screen. We've also removed the email notifications and digest function. Please let us know in the <a href="https://sweet.sh/community/sweet-development">Sweet Development</a> community if you find a bug.</p>
+                  <p>Hi new and old Sweet users! We've been busy with bugfixes and new features. In the Android and iOS app, once the updates go through the app stores, notifications will take you to the post they're about, and more notification improvements are planned. There have been some small tweaks to the new post screen. We've also removed the email notifications and digest function. Please let us know in the <a href="https://sweet.sh/community/sweet-development">Sweet Development</a> community if you find a bug.</p>
                 </section>
                 {{#if loggedInUserData.settings.showRecommendations}}
                     <section class="recommendations">
